--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ after_success:
     docker login -e $DOCKERHUB_EMAIL -u $DOCKERHUB_USER -p $DOCKERHUB_PASS;
     export REPO=jimeh/ozu.io;
     export TAG="$(if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi)";
-    make bin/ozuio_linux_amd64
-    docker build -f Dockerfile -t $REPO:$TAG .
-    docker push $REPO
+    make bin/ozuio_linux_amd64;
+    docker build -f Dockerfile -t $REPO:$TAG .;
+    docker push $REPO;
     fi
