--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
+sudo: required
+
+services:
+  - docker
+
 language: go
+
 go:
   - 1.7.3
+
 before_install:
   - go get github.com/kardianos/govendor
   - govendor sync
+
 script:
   - make test
+
 after_success:
   - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
     docker login -e $DOCKERHUB_EMAIL -u $DOCKERHUB_USER -p $DOCKERHUB_PASS;
