Update travis-ci docker build commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ script:
 
 after_success:
   - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-    docker login -e $DOCKERHUB_EMAIL -u $DOCKERHUB_USER -p $DOCKERHUB_PASS;
-    export REPO=jimeh/ozu.io;
+    docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASS;
+    export DOCKER_REPO=jimeh/ozu.io;
     export TAG="$(if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi)";
     make bin/ozuio_linux_amd64;
-    docker build -f Dockerfile -t $REPO:$TAG .;
-    docker push $REPO:$TAG;
+    docker build -f Dockerfile -t $DOCKER_REPO:$TAG .;
+    docker push $DOCKER_REPO:$TAG;
     fi
